fix(demo): fix horizontal scroll on the landing page

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -24,6 +24,7 @@
 }
 
 .demo {
+    overflow: hidden;
     background-blend-mode: multiply;
     background-size: cover, 150px;
 }
